nodex-cli/tests/snapshots/behaviour__minimal__check.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "has_errors": false,
    "rule_coverage": [
      {
        "rule_id": "acyclic_relation",
        "subjects": 0,
        "unit": "edges",
        "unjudged": 0
      },
      {
        "rule_id": "cross_field",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_enum",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_parse",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_type",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "orphan",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "parse_failure",
        "subjects": 3,
        "unit": "files",
        "unjudged": 0
      },
      {
        "rule_id": "required_field",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "stale_review",
        "subjects": 2,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "superseded_reference",
        "subjects": 2,
        "unit": "edges",
        "unjudged": 0
      }
    ],
    "skipped_rules": [],
    "total": 1,
    "violations": [
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "orphan",
        "severity": "warning"
      }
    ]
  },
  "ok": true,
  "warnings": [
    {
      "code": "scope_coverage",
      "message": "\"docs/legacy.md\" has kind \"generic\" but no identity.kind_rules glob matches it; add a rule covering this path (map it to \"generic\" explicitly if intended)"
    }
  ]
}
