nodex-cli/tests/snapshots/behaviour__minimal__export_config.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "identity": {
      "fallback_id_template": "{kind}-{stem}",
      "fallback_kind": "generic",
      "id_rules": [
        {
          "glob": null,
          "kind": "*",
          "may_be_empty": false,
          "template": "{kind}-{stem}"
        }
      ],
      "kind_rules": [
        {
          "glob": "docs/decisions/**",
          "kind": "adr",
          "may_be_empty": false
        }
      ]
    },
    "initial_status": "active",
    "output": {
      "dir": "_index"
    },
    "parser": {
      "extensions": [
        ".md"
      ],
      "link_patterns": [],
      "wikilink_enabled": false
    },
    "scope": {
      "conditional_exclude": [],
      "exclude": [],
      "follow_symlinks": false,
      "include": [
        "docs/**/*.md"
      ],
      "prune_dirs": [
        "node_modules",
        "__pycache__",
        "target",
        ".git",
        ".venv"
      ]
    },
    "version": "0.47.0"
  },
  "ok": true
}
