nodex-cli/tests/snapshots/behaviour__minimal__export_enums.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "fields": {},
    "kinds": [
      "generic",
      "adr",
      "guide",
      "readme"
    ],
    "statuses": {
      "allowed": [
        "active",
        "superseded",
        "archived",
        "deprecated",
        "abandoned"
      ],
      "terminal": [
        "superseded",
        "archived",
        "deprecated",
        "abandoned"
      ]
    }
  },
  "ok": true
}
