nodex-cli/tests/snapshots/behaviour__minimal__export_rules.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "rules": [
      {
        "description": "Every in-scope document must parse; a dropped document is an error, not a warning",
        "diff_aware": false,
        "id": "parse_failure",
        "judges_steps": false,
        "params": {},
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Built-in frontmatter fields must parse as their type; a failed value reads as absent",
        "diff_aware": false,
        "id": "field_parse",
        "judges_steps": false,
        "params": {},
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Every required frontmatter field (global plus per-kind override) must be set",
        "diff_aware": false,
        "id": "required_field",
        "judges_steps": false,
        "params": {},
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Typed fields must parse as their declared type (date / integer / bool)",
        "diff_aware": false,
        "id": "field_type",
        "judges_steps": false,
        "params": {},
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Enum-constrained fields must hold a value from their declared allowed set",
        "diff_aware": false,
        "id": "field_enum",
        "judges_steps": false,
        "params": {},
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Cross-field predicates (`when X require Y`) must be honoured",
        "diff_aware": false,
        "id": "cross_field",
        "judges_steps": false,
        "params": {
          "global": [
            {
              "require": "superseded_by",
              "when": "status=superseded"
            }
          ]
        },
        "severity": "error",
        "source": "builtin"
      },
      {
        "description": "Active docs are flagged when `reviewed` is older than `detection.stale_days`",
        "diff_aware": false,
        "id": "stale_review",
        "judges_steps": false,
        "params": {
          "stale_days": 180
        },
        "severity": "warning",
        "source": "builtin"
      },
      {
        "description": "Live documents no other document's record names — neither an incoming reference nor a predecessor's `superseded_by` — outside `detection.orphan_ok_kinds`, the per-node `orphan_ok` flag, and `detection.orphan_grace_days`",
        "diff_aware": false,
        "id": "orphan",
        "judges_steps": false,
        "params": {
          "orphan_grace_days": 14,
          "orphan_ok_kinds": []
        },
        "severity": "warning",
        "source": "builtin"
      },
      {
        "description": "Live documents citing a terminal document whose `supersedes` lineage continues in a live one; the lineage's own citations pass, and `supersedes` itself, `detection.superseded_reference_ok_kinds`, body citations of a target the citer's `detection.superseded_reference_ok_annotation` marker names and parts a lock holds are not asked",
        "diff_aware": false,
        "id": "superseded_reference",
        "judges_steps": false,
        "params": {
          "superseded_reference_ok_annotation": null,
          "superseded_reference_ok_kinds": []
        },
        "severity": "warning",
        "source": "builtin"
      },
      {
        "description": "Documents must not form cycles in the configured acyclic relations",
        "diff_aware": false,
        "id": "acyclic_relation",
        "judges_steps": false,
        "params": {
          "relations": [
            "implements"
          ]
        },
        "severity": "error",
        "source": "builtin"
      }
    ],
    "version": "0.46.0"
  },
  "ok": true
}
