nodex-cli/tests/snapshots/behaviour__minimal__migrate.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "applied": false,
    "changes": [
      {
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md"
      }
    ],
    "completion": "planned",
    "total": 1
  },
  "ok": true
}
