nodex-cli/tests/snapshots/behaviour__minimal__query_backlinks_adr_storage.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "guide-overview",
        "kind": "guide",
        "location": "L4",
        "path": "docs/overview.md",
        "relation": "references",
        "status": "active",
        "title": "Overview"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
