nodex-cli/tests/snapshots/behaviour__minimal__query_chain_adr_alpha.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "NOT_FOUND",
    "message": "missing node: id \"adr-alpha\""
  },
  "ok": false
}
