nodex-cli/tests/snapshots/behaviour__minimal__query_components.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "component_id": 1,
        "members": [
          {
            "id": "adr-storage",
            "kind": "adr",
            "path": "docs/decisions/storage.md",
            "status": "active",
            "title": "Storage"
          },
          {
            "id": "guide-overview",
            "kind": "guide",
            "path": "docs/overview.md",
            "status": "active",
            "title": "Overview"
          }
        ],
        "size": 2
      },
      {
        "component_id": 2,
        "members": [
          {
            "id": "generic-legacy",
            "kind": "generic",
            "path": "docs/legacy.md",
            "status": "active",
            "title": "Legacy note"
          }
        ],
        "size": 1
      }
    ],
    "total": 2
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
