nodex-cli/tests/snapshots/behaviour__minimal__query_covered_by_nodex.toml.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "guide-overview",
        "kind": "guide",
        "path": "docs/overview.md",
        "relation": "covers",
        "status": "active",
        "title": "Overview"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
